[package]
name = "mouse_over_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.25"
evdev = "0.12.1"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.100"
bincode = "1.3.3"