[package]
name = "mouse_over_ip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moip_server"
path = "src/server/main.rs"

[[bin]]
name = "moip_client"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.25"
evdev = "0.12.1"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.100"
bincode = "1.3.3"